fix(v2): Fix announcementBar layout shifts (#5040)
* Fix announcementBar layout shift

* useAnnouncementBar should return correct state after hydration

* refactor announcementBar => move utils to theme-common

* restore previous announcementBar

* typo

--- a/packages/docusaurus-theme-classic/src/theme/AnnouncementBar/styles.module.css
+++ b/packages/docusaurus-theme-classic/src/theme/AnnouncementBar/styles.module.css
@@ -18,6 +18,10 @@
   border-bottom: 1px solid var(--ifm-color-emphasis-100);
 }
 
+html[data-announcement-bar-initially-dismissed='true'] .announcementBar {
+  display: none;
+}
+
 @media print {
   .announcementBar {
     display: none;
